--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,9 +7,29 @@ body {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: #93c3b6;
   color: #212121;
   line-height: 1.5;
+}
+
+p {
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+li {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.list {
+
+    margin-bottom: 16px;
+
 }
 
 #search-box {
@@ -17,4 +37,29 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+  border-radius: 10px;
+}
+
+.search-box {
+    display: flex;
+    justify-content: center;
+
+}
+
+.info-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    padding: 20px;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.info-title {
+    margin-top: -4px;
+    margin-left: 10px;
 }
